feat(i18n): add privacy policy localization for English and Norwegian languages

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -29,7 +29,8 @@
     "total": "Total",
     "account": "Account",
     "backToHome": "Go back to home",
-    "managementDescription": "Manage your investments with precision and clarity."
+    "managementDescription": "Manage your investments with precision and clarity.",
+    "privacyPolicy": "Privacy Policy"
   },
   "header": {
     "title": "AlleGutta",
