--- a/i18n/locales/no.json
+++ b/i18n/locales/no.json
@@ -29,7 +29,8 @@
     "total": "Totalt",
     "account": "Konto",
     "backToHome": "Tilbake til hjem",
-    "managementDescription": "Administrer investeringene dine med presisjon og klarhet."
+    "managementDescription": "Administrer investeringene dine med presisjon og klarhet.",
+    "privacyPolicy": "Personvernerklæring"
   },
   "header": {
     "title": "AlleGutta",
