--- a/i18n/locales/no.json
+++ b/i18n/locales/no.json
@@ -163,6 +163,7 @@
     "ctaSubtitle": "Bli med i tusenvis av investorer som stoler på AlleGutta for porteføljeadministrasjon.",
     "startToday": "Start i dag",
     "createPortfolio": "Opprett din portefølje",
-    "goToPortfolio": "Gå til portefølje"
+    "goToPortfolio": "Gå til portefølje",
+    "registrationDisabled": "Registrering er deaktivert. Kontakt en administrator for tilgang."
   }
 }
