feat: Implement transaction import feature for Norwegian brokerage CSV files
- Added support for importing transactions from Norwegian brokerage CSV exports.
- Introduced new transaction types: DEPOSIT, WITHDRAWAL, REFUND, LIQUIDATION, REDEMPTION, EXCHANGE_IN, EXCHANGE_OUT, SPIN_OFF_IN, DECIMAL_LIQUIDATION, and DECIMAL_WITHDRAWAL.
- Created a new ImportTransactionsModal component for handling file uploads and previews.
- Developed API endpoint for processing imported transactions and validating data.
- Updated database schema to accommodate new transaction types.
- Removed outdated English and Norwegian locale files.
- Updated Nuxt configuration for language directory.
- Added comprehensive import guide documentation.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -165,5 +165,69 @@
     "createPortfolio": "Create Your Portfolio",
     "goToPortfolio": "Go to Portfolio",
     "registrationDisabled": "Registration is disabled. Contact an administrator for access."
+  },
+  "about": {
+    "pageTitle": "About AlleGutta",
+    "pageDescription": "A modern, secure, and user-friendly portfolio management application built with cutting-edge web technologies.",
+    "ourStory": "Our Story",
+    "storyParagraph1": "AlleGutta was born from the need for a simple yet powerful portfolio tracking solution. As individual investors, we found existing tools either too complex or lacking the features we needed to effectively manage our investments.",
+    "storyParagraph2": "This application represents a complete rebuild of our original Angular-based portfolio tracker, now powered by Nuxt 4 for better performance, user experience, and modern web capabilities including Progressive Web App (PWA) support.",
+    "keyFeatures": "Key Features",
+    "portfolioManagementTitle": "Portfolio Management",
+    "portfolioManagementDesc": "Create and manage multiple portfolios with detailed tracking of holdings and performance.",
+    "transactionTrackingTitle": "Transaction Tracking",
+    "transactionTrackingDesc": "Record buy/sell orders, dividends, stock splits, and other investment activities.",
+    "secureAuthTitle": "Secure Authentication",
+    "secureAuthDesc": "Enterprise-grade security powered by Kinde authentication with multi-factor support.",
+    "pwaTitle": "Progressive Web App",
+    "pwaDesc": "Install on any device for a native app experience with offline capabilities.",
+    "technologyStack": "Technology Stack",
+    "readyToStart": "Ready to Get Started?",
+    "joinUs": "Join us and start managing your portfolio like a pro.",
+    "createAccount": "Create Account",
+    "goToPortfolio": "Go to Portfolio",
+    "learnMore": "Learn More"
+  },
+  "portfolioPage": {
+    "loading": "Loading portfolio...",
+    "notFound": "Portfolio Not Found",
+    "noAccess": "The requested portfolio doesn't exist or you don't have access to it.",
+    "adminEdit": "Admin Edit",
+    "updatePrices": "Update Prices",
+    "addTransaction": "Add Transaction",
+    "importTransactions": "Import Transactions",
+    "default": "Default",
+    "portfolioId": "Portfolio ID",
+    "totalValue": "Total Value",
+    "totalGainLoss": "Total Gain/Loss",
+    "holdings": "Holdings",
+    "lastUpdated": "Last Updated",
+    "positions": "positions",
+    "topPerformers": "Top Performers",
+    "noPositivePerformers": "No positive performers yet",
+    "portfolioAllocation": "Portfolio Allocation",
+    "noHoldingsToDisplay": "No holdings to display",
+    "portfolioInsights": "Portfolio Insights",
+    "bestPerformer": "Best Performer",
+    "largestPosition": "Largest Position",
+    "totalTransactions": "Total Transactions",
+    "holdingsTable": "Holdings",
+    "symbol": "Symbol",
+    "quantity": "Quantity",
+    "avgPrice": "Avg Price",
+    "currentPrice": "Current Price",
+    "marketValue": "Market Value",
+    "gainLoss": "Gain/Loss",
+    "noHoldingsFound": "No holdings found",
+    "startByAdding": "Start by adding your first transaction",
+    "recentTransactions": "Recent Transactions",
+    "date": "Date",
+    "type": "Type",
+    "price": "Price",
+    "total": "Total",
+    "actions": "Actions",
+    "edit": "Edit",
+    "delete": "Delete",
+    "noTransactionsFound": "No transactions found"
   }
 }
