--- a/i18n/locales/no.json
+++ b/i18n/locales/no.json
@@ -165,5 +165,69 @@
     "createPortfolio": "Opprett din portefølje",
     "goToPortfolio": "Gå til portefølje",
     "registrationDisabled": "Registrering er deaktivert. Kontakt en administrator for tilgang."
+  },
+  "about": {
+    "pageTitle": "Om AlleGutta",
+    "pageDescription": "En moderne, sikker og brukervennlig porteføljeadministrasjonsapplikasjon bygget med banebrytende webteknologier.",
+    "ourStory": "Vår historie",
+    "storyParagraph1": "AlleGutta ble født fra behovet for en enkel, men kraftig porteføljesporingsløsning. Som individuelle investorer fant vi at eksisterende verktøy enten var for komplekse eller manglet funksjonene vi trengte for å effektivt administrere investeringene våre.",
+    "storyParagraph2": "Denne applikasjonen representerer en fullstendig ombygging av vår opprinnelige Angular-baserte porteføljesporer, nå drevet av Nuxt 4 for bedre ytelse, brukeropplevelse og moderne webfunksjoner inkludert Progressive Web App (PWA) støtte.",
+    "keyFeatures": "Hovedfunksjoner",
+    "portfolioManagementTitle": "Porteføljeadministrasjon",
+    "portfolioManagementDesc": "Opprett og administrer flere porteføljer med detaljert sporing av beholdninger og ytelse.",
+    "transactionTrackingTitle": "Transaksjonssporing",
+    "transactionTrackingDesc": "Registrer kjøps-/salgsordrer, utbytte, aksjesplitt og andre investeringsaktiviteter.",
+    "secureAuthTitle": "Sikker autentisering",
+    "secureAuthDesc": "Bedriftskvalitets sikkerhet drevet av Kinde-autentisering med flerfaktorstøtte.",
+    "pwaTitle": "Progressiv webapplikasjon",
+    "pwaDesc": "Installer på hvilken som helst enhet for en innfødt appopplevelse med offline-funksjoner.",
+    "technologyStack": "Teknologistakk",
+    "readyToStart": "Klar til å komme i gang?",
+    "joinUs": "Bli med oss og begynn å administrere porteføljen din som en proff.",
+    "createAccount": "Opprett konto",
+    "goToPortfolio": "Gå til portefølje",
+    "learnMore": "Lær mer"
+  },
+  "portfolioPage": {
+    "loading": "Laster portefølje...",
+    "notFound": "Portefølje ikke funnet",
+    "noAccess": "Den forespurte porteføljen eksisterer ikke eller du har ikke tilgang til den.",
+    "adminEdit": "Admin redigering",
+    "updatePrices": "Oppdater priser",
+    "addTransaction": "Legg til transaksjon",
+    "importTransactions": "Importer transaksjoner",
+    "default": "Standard",
+    "portfolioId": "Portefølje ID",
+    "totalValue": "Totalverdi",
+    "totalGainLoss": "Total gevinst/tap",
+    "holdings": "Beholdninger",
+    "lastUpdated": "Sist oppdatert",
+    "positions": "posisjoner",
+    "topPerformers": "Toppytere",
+    "noPositivePerformers": "Ingen positive ytere ennå",
+    "portfolioAllocation": "Porteføljeallokering",
+    "noHoldingsToDisplay": "Ingen beholdninger å vise",
+    "portfolioInsights": "Porteføljeinnsikt",
+    "bestPerformer": "Beste yter",
+    "largestPosition": "Største posisjon",
+    "totalTransactions": "Totale transaksjoner",
+    "holdingsTable": "Beholdninger",
+    "symbol": "Symbol",
+    "quantity": "Antall",
+    "avgPrice": "Gjennomsnittspris",
+    "currentPrice": "Nåværende pris",
+    "marketValue": "Markedsverdi",
+    "gainLoss": "Gevinst/tap",
+    "noHoldingsFound": "Ingen beholdninger funnet",
+    "startByAdding": "Start ved å legge til din første transaksjon",
+    "recentTransactions": "Nylige transaksjoner",
+    "date": "Dato",
+    "type": "Type",
+    "price": "Pris",
+    "total": "Totalt",
+    "actions": "Handlinger",
+    "edit": "Rediger",
+    "delete": "Slett",
+    "noTransactionsFound": "Ingen transaksjoner funnet"
   }
 }
