feat: Add fees support to transactions and update cash handling logic

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -224,6 +224,7 @@
     "date": "Date",
     "type": "Type",
     "price": "Price",
+    "fees": "Fees",
     "total": "Total",
     "actions": "Actions",
     "edit": "Edit",
