feat: Refactor authentication initialization and improve performance
- Updated `useAuth.ts` to use `$fetch` for user data retrieval, enhancing performance and error handling.
- Added loading state management for transactions and holdings in `portfolio.ts`.
- Introduced a new privacy policy page with corresponding translations in English and Norwegian.
- Enhanced portfolio loading states in various components to improve user experience during data fetching.
- Added import transactions functionality in the admin portfolio management page.
- Updated UI components for better accessibility and responsiveness.
- Cleaned up unused code and improved code readability across multiple files.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -32,6 +32,18 @@
     "managementDescription": "Manage your investments with precision and clarity.",
     "privacyPolicy": "Privacy Policy"
   },
+  "privacy": {
+    "title": "Privacy Policy",
+    "description": "This privacy policy describes how AlleGutta Portfolio Manager handles your personal information.",
+    "informationWeCollect": "Information We Collect",
+    "informationWeCollectDescription": "We collect information you provide directly to us, such as when you create an account, add portfolio data, or contact us for support.",
+    "howWeUseInfo": "How We Use Your Information",
+    "howWeUseInfoDescription": "We use the information we collect to provide, maintain, and improve our services, including portfolio tracking and analysis features.",
+    "dataSecurity": "Data Security",
+    "dataSecurityDescription": "We implement appropriate security measures to protect your personal information against unauthorized access, alteration, disclosure, or destruction.",
+    "contactUs": "Contact Us",
+    "contactUsDescription": "If you have any questions about this privacy policy, please contact us."
+  },
   "header": {
     "title": "AlleGutta",
     "portfolios": "Portfolios",
@@ -54,6 +66,7 @@
     "noPermissionManagePortfolios": "You don't have permission to manage portfolios."
   },
   "portfolio": {
+    "portfolio": "Portfolio",
     "management": "Portfolio Management",
     "managementDescription": "Create and manage portfolios for the application",
     "createPortfolio": "Create Portfolio",
@@ -192,7 +205,7 @@
     "loading": "Loading portfolio...",
     "notFound": "Portfolio Not Found",
     "noAccess": "The requested portfolio doesn't exist or you don't have access to it.",
-    "adminEdit": "Admin Edit",
+    "adminEdit": "Edit Portfolio",
     "updatePrices": "Update Prices",
     "addTransaction": "Add Transaction",
     "importTransactions": "Import Transactions",
