feat: Implement locale-aware currency formatting, enhance portfolio table with instrument names, and update DevContainer for SQLite

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,4 +1,9 @@
 {
+  "currency": {
+    "defaultCurrency": "USD",
+    "symbol": "$",
+    "decimals": 2
+  },
   "common": {
     "home": "Home",
     "about": "About",
@@ -228,7 +233,9 @@
     "symbol": "Symbol",
     "quantity": "Quantity",
     "avgPrice": "Avg Price",
+    "cost": "Cost",
     "currentPrice": "Current Price",
+    "todayChange": "Today %",
     "marketValue": "Market Value",
     "gainLoss": "Gain/Loss",
     "noHoldingsFound": "No holdings found",
