feat: Implement All-Time High (ATH) tracking and enhance portfolio metrics with daily changes

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -220,6 +220,8 @@
     "totalGainLoss": "Total Gain/Loss",
     "holdings": "Holdings",
     "lastUpdated": "Last Updated",
+    "changedToday": "Changed Today",
+    "allTimeHigh": "All-Time High",
     "positions": "positions",
     "topPerformers": "Top Performers",
     "noPositivePerformers": "No positive performers yet",
