feat: Update All-Time High (ATH) display and localization in portfolio page

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -221,7 +221,7 @@
     "holdings": "Holdings",
     "lastUpdated": "Last Updated",
     "changedToday": "Changed Today",
-    "allTimeHigh": "All-Time High",
+    "allTimeHigh": "ATH",
     "positions": "positions",
     "topPerformers": "Top Performers",
     "noPositivePerformers": "No positive performers yet",
