--- a/i18n/locales/no.json
+++ b/i18n/locales/no.json
@@ -223,7 +223,7 @@
     "holdings": "Beholdninger",
     "lastUpdated": "Sist oppdatert",
     "changedToday": "Endret i dag",
-    "allTimeHigh": "All-tids høyde",
+    "allTimeHigh": "ATH",
     "positions": "posisjoner",
     "topPerformers": "Toppytere",
     "noPositivePerformers": "Ingen positive ytere ennå",
