Enhance build and push script with version increment options and Dockerfile support
- Updated `build-and-push.sh` to allow custom Dockerfile input and added detailed version increment options (major, minor, patch, build).
- Improved user prompts and output messages for clarity.
- Removed Docker Hub authentication check to streamline the process.
- Updated `test-build.sh` to accept a custom Dockerfile and adjusted test tag naming.
- Introduced a new `Dockerfile.alpine` for a minimal Alpine-based build, optimizing dependencies and build process.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -14,7 +14,7 @@
     "logout": "Logout",
     "register": "Register",
     "save": "Save",
-    "cancel": "Cancel", 
+    "cancel": "Cancel",
     "edit": "Edit",
     "delete": "Delete",
     "add": "Add",
@@ -146,7 +146,7 @@
   },
   "messages": {
     "portfolioCreated": "Portfolio created successfully",
-    "portfolioUpdated": "Portfolio updated successfully", 
+    "portfolioUpdated": "Portfolio updated successfully",
     "portfolioDeleted": "Portfolio deleted successfully",
     "transactionAdded": "Transaction added successfully",
     "transactionUpdated": "Transaction updated successfully",
@@ -188,7 +188,9 @@
     "startToday": "Start Today",
     "createPortfolio": "Create Your Portfolio",
     "goToPortfolio": "Go to Portfolio",
-    "registrationDisabled": "Registration is disabled. Contact an administrator for access."
+    "registrationDisabled": "Registration is disabled. Contact an administrator for access.",
+    "choosePortfolio": "Choose portfolio",
+    "publicPortfolios": "Public portfolios"
   },
   "about": {
     "pageTitle": "About AlleGutta",
