feat: enhance portfolio performance display with winners, losers, and most traded sections; update localization strings

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -233,7 +233,14 @@
     "allTimeHigh": "ATH",
     "positions": "positions",
     "topPerformers": "Top Performers",
-    "noPositivePerformers": "No positive performers yet",
+    "winners": "Today's Winners",
+    "losers": "Today's Losers",
+    "mostTraded": "Most Traded",
+    "noPositivePerformers": "No positive changes today",
+    "noNegativePerformers": "No negative changes today",
+    "noTradingVolume": "No trading activity today",
+    "volume": "Volume",
+    "ofPortfolio": "of portfolio",
     "portfolioAllocation": "Portfolio Allocation",
     "noHoldingsToDisplay": "No holdings to display",
     "portfolioInsights": "Portfolio Insights",
