--- a/i18n/locales/no.json
+++ b/i18n/locales/no.json
@@ -233,7 +233,14 @@
     "allTimeHigh": "ATH",
     "positions": "posisjoner",
     "topPerformers": "Toppytere",
-    "noPositivePerformers": "Ingen positive ytere ennå",
+    "winners": "Dagens vinnere",
+    "losers": "Dagens tapere",
+    "mostTraded": "Mest omsatt",
+    "noPositivePerformers": "Ingen positive endringer i dag",
+    "noNegativePerformers": "Ingen negative endringer i dag",
+    "noTradingVolume": "Ingen handelsaktivitet i dag",
+    "volume": "Volum",
+    "ofPortfolio": "av portefølje",
     "portfolioAllocation": "Porteføljeallokering",
     "noHoldingsToDisplay": "Ingen beholdninger å vise",
     "portfolioInsights": "Porteføljeinnsikt",
