Refactor API endpoints and improve error handling; add official bylaws for Aksjespareklubben Allegutta

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -7,6 +7,7 @@
   "common": {
     "home": "Home",
     "about": "About",
+    "vedtekter": "Articles",
     "portfolios": "Portfolios",
     "portfolio": "Portfolio",
     "admin": "Admin",
@@ -194,10 +195,18 @@
   },
   "about": {
     "pageTitle": "About AlleGutta",
-    "pageDescription": "A modern, secure, and user-friendly portfolio management application built with cutting-edge web technologies.",
+    "pageDescription": "A modern, secure, and user-friendly portfolio management application built with well known web technologies.",
     "ourStory": "Our Story",
     "storyParagraph1": "AlleGutta was born from the need for a simple yet powerful portfolio tracking solution. As individual investors, we found existing tools either too complex or lacking the features we needed to effectively manage our investments.",
     "storyParagraph2": "This application represents a complete rebuild of our original Angular-based portfolio tracker, now powered by Nuxt 4 for better performance, user experience, and modern web capabilities including Progressive Web App (PWA) support.",
+    "clubHistory": "Investment Club History",
+    "clubHistoryDesc": "Aksjespareklubben Allegutta was founded on January 29, 2014, as an informal investment group with a clear goal: to provide members with insight and understanding of the stock market while building long-term wealth together.",
+    "investmentPhilosophy": "Our Investment Philosophy",
+    "investmentPhilosophyDesc": "We follow a buy and hold strategy focusing on quality companies listed on Oslo Stock Exchange - OBX, OSEBX and Euronext Growth. Our goal is long-term value creation rather than short-term speculation.",
+    "socialAspect": "Social Network",
+    "socialAspectDesc": "Beyond the investment purpose, the investment club functions as a social network where members share knowledge, experience and learn from each other about the stock market and business life.",
+    "governance": "Governance and Organization",
+    "governanceDesc": "The club is run democratically with annual meetings, elected board and transparent decision-making processes. All members have equal voting rights regardless of investment amount, and important decisions are made collectively.",
     "keyFeatures": "Key Features",
     "portfolioManagementTitle": "Portfolio Management",
     "portfolioManagementDesc": "Create and manage multiple portfolios with detailed tracking of holdings and performance.",
