--- a/i18n/locales/no.json
+++ b/i18n/locales/no.json
@@ -7,6 +7,7 @@
   "common": {
     "home": "Hjem",
     "about": "Om",
+    "vedtekter": "Vedtekter",
     "portfolios": "Porteføljer",
     "portfolio": "Portefølje",
     "admin": "Admin",
@@ -194,10 +195,18 @@
   },
   "about": {
     "pageTitle": "Om AlleGutta",
-    "pageDescription": "En moderne, sikker og brukervennlig porteføljeadministrasjonsapplikasjon bygget med banebrytende webteknologier.",
+    "pageDescription": "En moderne, sikker og brukervennlig porteføljeadministrasjonsapplikasjon bygget med kjente webteknologier.",
     "ourStory": "Vår historie",
     "storyParagraph1": "AlleGutta ble født fra behovet for en enkel, men kraftig porteføljesporingsløsning. Som individuelle investorer fant vi at eksisterende verktøy enten var for komplekse eller manglet funksjonene vi trengte for å effektivt administrere investeringene våre.",
     "storyParagraph2": "Denne applikasjonen representerer en fullstendig ombygging av vår opprinnelige Angular-baserte porteføljesporer, nå drevet av Nuxt 4 for bedre ytelse, brukeropplevelse og moderne webfunksjoner inkludert Progressive Web App (PWA) støtte.",
+    "clubHistory": "Aksjespareklubbens historie",
+    "clubHistoryDesc": "Aksjespareklubben Allegutta ble stiftet 29. januar 2014 som en uformell investeringsgruppe med et klart mål: å gi medlemmene innsikt og forståelse for aksjemarkedet mens vi bygger langsiktig formue sammen.",
+    "investmentPhilosophy": "Vår investeringsfilosofi",
+    "investmentPhilosophyDesc": "Vi følger en kjøp og behold (buy & hold) strategi med fokus på kvalitetsselskaper notert på Oslo Børs - OBX, OSEBX og Euronext Growth. Vårt mål er langsiktig verdiskapning fremfor kortsiktig spekulasjon.",
+    "socialAspect": "Sosialt nettverk",
+    "socialAspectDesc": "Utover investeringsformålet fungerer aksjespareklubben som et sosialt nettverk hvor medlemmer deler kunnskap, erfaring og lærer av hverandre om aksjemarkedet og næringslivet.",
+    "governance": "Styring og organisering",
+    "governanceDesc": "Klubben drives demokratisk med årsmøter, valgt styre og transparente beslutningsprosesser. Alle medlemmer har lik stemmerett uavhengig av investeringsbeløp, og viktige beslutninger tas i fellesskap.",
     "keyFeatures": "Hovedfunksjoner",
     "portfolioManagementTitle": "Porteføljeadministrasjon",
     "portfolioManagementDesc": "Opprett og administrer flere porteføljer med detaljert sporing av beholdninger og ytelse.",
