feat: refactor portfolio statistics and insights components for improved readability and maintainability; add new StatCard and InsightsBox components

--- a/i18n/locales/no.json
+++ b/i18n/locales/no.json
@@ -276,6 +276,7 @@
     "actions": "Handlinger",
     "edit": "Rediger",
     "delete": "Slett",
-    "noTransactionsFound": "Ingen transaksjoner funnet"
+    "noTransactionsFound": "Ingen transaksjoner funnet",
+    "cashBalance": "Kontantbeholdning"
   }
 }
