feat: Enhance portfolio management UI and functionality
- Updated AppHeader.vue to improve admin link visibility and styling.
- Modified HoldingsTable.vue to refine percentage formatting and type definitions.
- Refactored AllTimeHigh.vue, CashBalance.vue, ChangedToday.vue, HoldingsCount.vue, LastUpdated.vue, MarketValue.vue, TotalGainLoss.vue, and TotalValue.vue to utilize icon components more effectively.
- Improved portfolios.vue layout for better responsiveness and user experience.
- Updated [id].vue to enhance portfolio insights and holdings table integration.
- Added new translations for cash balance in English and updated market value in Norwegian.
- Updated database schema in dev.db.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -276,6 +276,7 @@
     "actions": "Actions",
     "edit": "Edit",
     "delete": "Delete",
-    "noTransactionsFound": "No transactions found"
+    "noTransactionsFound": "No transactions found",
+    "cashBalance": "Cash balance"
   }
 }
