--- a/i18n/locales/no.json
+++ b/i18n/locales/no.json
@@ -263,7 +263,7 @@
     "cost": "Kostnad",
     "currentPrice": "Pris",
     "todayChange": "I dag %",
-    "marketValue": "Verdi",
+    "marketValue": "Markedsverdi",
     "gainLoss": "Gevinst/tap",
     "noHoldingsFound": "Ingen beholdninger funnet",
     "startByAdding": "Start ved å legge til din første transaksjon",
